--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ material = "1.10.0"
 activity = "1.10.1"
 constraintlayout = "2.1.4"
 retrofit = "2.11.0"
+lifecycle_version = "2.8.7"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -19,6 +20,9 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
 gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
+viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel", version.ref = "lifecycle_version"}
+livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata", version.ref = "lifecycle_version"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
