--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ retrofit = "2.11.0"
 lifecycle_version = "2.8.7"
 rxjava_version = "3.1.8"
 rxandroid_version = "3.0.2"
+cardview_version = "1.0.0"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -26,6 +27,7 @@ viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel", versio
 livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata", version.ref = "lifecycle_version"}
 rxjava = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxjava_version"}
 rxandroid = { group = "io.reactivex.rxjava3", name = "rxandroid", version.ref = "rxandroid_version"}
+cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview_version"}
 
 
 [plugins]
