--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ lifecycle_version = "2.8.7"
 rxjava_version = "3.1.8"
 rxandroid_version = "3.0.2"
 cardview_version = "1.0.0"
+recyclerview_version = "1.4.0"
+glide_version = "4.14.2"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -28,6 +30,9 @@ livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata", version.
 rxjava = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxjava_version"}
 rxandroid = { group = "io.reactivex.rxjava3", name = "rxandroid", version.ref = "rxandroid_version"}
 cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview_version"}
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview_version"}
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide_version"}
+glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide_version"}
 
 
 [plugins]
