--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ constraintlayout = "2.1.4"
 retrofit = "2.11.0"
 lifecycle_version = "2.8.7"
 rxjava_version = "3.1.8"
+rxjava_adapter_version = "2.9.0"
 rxandroid_version = "3.0.2"
 cardview_version = "1.0.0"
 recyclerview_version = "1.4.0"
@@ -30,6 +31,7 @@ viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel", versio
 livedata = { group = "androidx.lifecycle", name = "lifecycle-livedata", version.ref = "lifecycle_version"}
 rxjava = { group = "io.reactivex.rxjava3", name = "rxjava", version.ref = "rxjava_version"}
 rxandroid = { group = "io.reactivex.rxjava3", name = "rxandroid", version.ref = "rxandroid_version"}
+rxjava-adapter = { group = "com.squareup.retrofit2", name = "adapter-rxjava3", version.ref = "rxjava_adapter_version"}
 cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview_version"}
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview_version"}
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide_version"}
