--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ cardview_version = "1.0.0"
 recyclerview_version = "1.4.0"
 glide_version = "4.14.2"
 circleimageview_version = "3.1.0"
+room_version = "2.6.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -37,7 +38,11 @@ recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version
 glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide_version"}
 glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide_version"}
 circleimageview = { group = "de.hdodenhof", name = "circleimageview", version.ref = "circleimageview_version"}
-
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room_version"}
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room_version"}
+room-rxjava3 = { group = "androidx.room", name = "room-rxjava3", version.ref = "room_version"}
+room-guava = { group = "androidx.room", name = "room-guava", version.ref = "room_version"}
+room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room_version"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
